--- a/css/style.css
+++ b/css/style.css
@@ -2715,9 +2715,9 @@ Version: 1.0
         margin-right: 0.3rem;
         margin-left: 0.3rem;
       }
-
+      
       .off-canvas-open {
-        max-width: 320px;
+        max-width: 100vw;
       }
   }  
 
