--- a/css/style.css
+++ b/css/style.css
@@ -1402,9 +1402,13 @@ Version: 1.0
 
       .sidebar-categories__item {
         padding-left: 0;
+        position: static;
       }
 
       .sidebar-categories__link {
+        position: relative;
+        display: inline-block;
+        width: 100%;
         color: #333232;
         font-size: 0.813rem;
         padding-left: 0.4rem;
@@ -2335,10 +2339,6 @@ Version: 1.0
         margin-bottom: 1.5rem;
       }
 
-            .sidebar {
-              display: none;
-            }
-
       .main-bottom-banner {
         order: -1;
       }
@@ -2719,9 +2719,35 @@ Version: 1.0
       .off-canvas-open {
         max-width: 100vw;
       }
-  }  
+  }
 
-  /* Just for dev responsive */
-  .sidebar-categories__drop-down {
+  /* Super puper drop-down menu, kurva! */
+
+  .sidebar-categories__list {
+    position: relative;
+  }
+  
+  .sidebar-categories__drop-cont {
+    position: absolute;
+    top: 0;
+    left: calc(100% + 15px);
     display: none;
-  }    
+    padding: 1.5rem;
+    background-color: #fff;
+    border: 1px solid var(--main-gray);
+    width: 50vw;
+    min-height: 100%;    
+    animation-duration: .3s;  
+    animation-direction: alternate;
+    z-index: -1;
+  }
+
+  .sidebar-categories__item:hover .sidebar-categories__drop-cont {
+    display: flex;
+    z-index: 1;
+    animation-name: fadeIn;
+  }
+
+  .sidebar-categories__drop-cont .footer-links__title {
+    color: #000000;
+  }
